@@ -99,7 +99,7 @@ public class DashboardFragment extends Fragment {
                 .setMessage("The duration of this task is: " + duration + '\n' +
                             "The deadline of this task is: " + deadline + '\n' +
                             "Intensity is set to: " + intensity + '\n' +
-                            "difficulty is set to: " + difficulty + '\n' + button.getId()
+                            "difficulty is set to: " + difficulty + '\n'
                 )
                 .setPositiveButton("Ok", new DialogInterface.OnClickListener() {
                     public void onClick(DialogInterface dialoginterface, int i) {
@@ -107,21 +107,18 @@ public class DashboardFragment extends Fragment {
                 });
         infoDialog.setNegativeButton("Delete", new DialogInterface.OnClickListener() {
                     public void onClick(DialogInterface dialoginterface, int i) {
-                        System.out.println(scheduler.getTaskList().size());
                         scheduler.removeTask(name); // remove the task from the task list
-                        System.out.println(scheduler.getTaskList().size());
                         layout.removeView(button); // remove the button
-//                        buttonArrayList.remove(new Integer(button.getId()));
-//                        --buttonCount; // decrease the button counter
-//                        for (int btnID : buttonArrayList) {
-//                            System.out.println(btnID);
-//                            set.connect(btnID, ConstraintSet.TOP, ConstraintSet.PARENT_ID, ConstraintSet.TOP, 150 );
-//                            set.connect(button.getId(), ConstraintSet.RIGHT, ConstraintSet.PARENT_ID, ConstraintSet.RIGHT, 0);
-//                            set.connect(button.getId(), ConstraintSet.LEFT, ConstraintSet.PARENT_ID, ConstraintSet.LEFT, 0);
-//                            set.constrainHeight(button.getId(), 100);
-//                            set.applyTo(layout);
-//                        }
-
+                        int index = buttonArrayList.indexOf(button.getId());
+                        buttonArrayList.remove(Integer.valueOf(button.getId()));
+                        --buttonCount; // decrease the button counter
+                        for (i = index; i < buttonArrayList.size(); ++i) {
+                            set.connect(buttonArrayList.get(i), ConstraintSet.TOP, ConstraintSet.PARENT_ID, ConstraintSet.TOP, 150 + i * 78);
+                            set.connect(buttonArrayList.get(i), ConstraintSet.RIGHT, ConstraintSet.PARENT_ID, ConstraintSet.RIGHT, 0);
+                            set.connect(buttonArrayList.get(i), ConstraintSet.LEFT, ConstraintSet.PARENT_ID, ConstraintSet.LEFT, 0);
+                            set.constrainHeight(buttonArrayList.get(i), 100);
+                            set.applyTo(layout);
+                        }
                     }
                 });
         infoDialog.show();
@@ -164,6 +161,7 @@ public class DashboardFragment extends Fragment {
 
         dialog.show();
         newTaskSave.setOnClickListener(new View.OnClickListener() {
+            @SuppressLint("ResourceAsColor")
             @Override
             public void onClick(View v) {
                 // Get today's date
@@ -199,17 +197,6 @@ public class DashboardFragment extends Fragment {
                     scheduler.addTask(name, duration, intensity.toLowerCase(), difficulty.toLowerCase(), deadline, currentDate);
                     System.out.println(scheduler.getTaskList());
 
-                    // Update the taskList visualised in the dashboard fragment
-//                    final TextView taskList = getView().findViewById(R.id.taskList);
-//                    taskList.setMovementMethod(new ScrollingMovementMethod());
-//                    StringBuilder tasksString = new StringBuilder();
-//                    for (Task e : scheduler.getTaskList()) {
-//                        if (!tasksString.toString().contains(e.getName())) {
-//                            tasksString.append(e.getName()).append('\n');
-//                        }
-//                    }
-//                    taskList.setText(tasksString.toString());
-
                     // Find the dashboard layout
                     final ConstraintLayout layout = (ConstraintLayout) getView().findViewById(R.id.dashboard_layout);
                     final ConstraintSet set = new ConstraintSet();
@@ -219,8 +206,9 @@ public class DashboardFragment extends Fragment {
                     final Button button = new Button(getActivity());
                     button.setText(name);
                     @SuppressLint("UseCompatLoadingForDrawables") Drawable img = button.getContext().getDrawable( R.drawable.ic_baseline_info_24 );
-                    button.setCompoundDrawablesWithIntrinsicBounds(null, null, img,null);
+                    button.setCompoundDrawablesWithIntrinsicBounds(null, null, img,null); // set icon on the right of button
                     button.setId(name.hashCode()); // get unique ID from name
+                    button.setBackgroundResource(R.color.colorPrimaryDark);
                     buttonArrayList.add(button.getId());
                     button.setOnClickListener( new View.OnClickListener() {
                         @Override
@@ -230,14 +218,15 @@ public class DashboardFragment extends Fragment {
                     });
 
                     layout.addView(button);
-                    set.connect(button.getId(), ConstraintSet.TOP, ConstraintSet.PARENT_ID, ConstraintSet.TOP, 150+buttonCount*75);
+                    // place the button below the other buttons
+                    set.connect(button.getId(), ConstraintSet.TOP, ConstraintSet.PARENT_ID, ConstraintSet.TOP, 150 + buttonCount * 78);
                     set.connect(button.getId(), ConstraintSet.RIGHT, ConstraintSet.PARENT_ID, ConstraintSet.RIGHT, 0);
                     set.connect(button.getId(), ConstraintSet.LEFT, ConstraintSet.PARENT_ID, ConstraintSet.LEFT, 0);
                     set.constrainHeight(button.getId(), 100);
                     prevBtnID = button.getId();
-
                     set.applyTo(layout);
-                    ++buttonCount;
+                    ++buttonCount; // increase the button counter
+
                     // Close pop-up window
                     dialog.dismiss();
 
